[gd_scene load_steps=11 format=4 uid="uid://30jn1w2be3md"]

[ext_resource type="Script" path="res://game/code/main.gd" id="1_1us4g"]
[ext_resource type="PackedScene" uid="uid://7erm2l1so0hu" path="res://game/scenes/player.tscn" id="1_wtjf3"]
[ext_resource type="AudioStream" uid="uid://jx4ysx2gwnf6" path="res://game/resources/sounds/pistol-cock-6014.mp3" id="3_rbis5"]
[ext_resource type="AudioStream" uid="uid://onvuasy5ccho" path="res://game/resources/sounds/pistol-shot-233473.mp3" id="4_7kibh"]
[ext_resource type="AudioStream" uid="uid://bh1udxg0bagyn" path="res://game/resources/sounds/ak-47-sound-effect-267042.wav" id="5_lgjq5"]
[ext_resource type="Texture2D" uid="uid://djd34md6qm0we" path="res://game/resources/map/pixil-frame-0 (10).png" id="6_5ebcn"]
[ext_resource type="Texture2D" uid="uid://boijrthy148jy" path="res://game/resources/gui/pixil-frame-0 (29).png" id="6_ssmvd"]
[ext_resource type="Texture2D" uid="uid://ejp0dirsmtm7" path="res://game/resources/gui/pixil-frame-0 (30).png" id="7_ywtji"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xw0i5"]
texture = ExtResource("6_5ebcn")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/z_index = -2

[sub_resource type="TileSet" id="TileSet_ipjfq"]
tile_size = Vector2i(32, 32)
sources/1 = SubResource("TileSetAtlasSource_xw0i5")

[node name="Main" type="Node2D"]
z_index = 3
script = ExtResource("1_1us4g")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="player" parent="." instance=ExtResource("1_wtjf3")]

[node name="reload" type="AudioStreamPlayer2D" parent="player"]
stream = ExtResource("3_rbis5")

[node name="pistol" type="AudioStreamPlayer2D" parent="player"]
stream = ExtResource("4_7kibh")

[node name="rifle" type="AudioStreamPlayer2D" parent="player"]
stream = ExtResource("5_lgjq5")
volume_db = 13.867

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
custom_minimum_size = Vector2(573, 325)
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 574.0
offset_bottom = 324.0

[node name="Label" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 79.0
offset_bottom = 24.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Ammo: 12"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 247.0
offset_bottom = 76.0

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/Control"]
z_index = 2
layout_mode = 0
offset_left = 956.0
offset_top = 648.0
offset_right = 1156.0
offset_bottom = 688.0
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_ssmvd")
region_rect = Rect2(0, 0, 40, 40)
axis_stretch_horizontal = 1

[node name="SelectedGun" type="Sprite2D" parent="CanvasLayer"]
z_index = 3
position = Vector2(987, 677)
scale = Vector2(1.5, 1.5)
texture = ExtResource("7_ywtji")

[node name="ZombieSpawntime" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="groundLayer" type="TileMapLayer" parent="."]
z_index = -2
tile_map_data = PackedByteArray("AAAEAP//AQAAAAAAAAADAP//AQAAAAAAAAACAP//AQAAAAAAAAABAP//AQAAAAAAAAAAAP//AQAAAAAAAAD/////AQAAAAAAAAD//wAAAQAAAAAAAAD//wEAAQAAAAAAAAAAAAAAAQAAAAAAAAD9/wAAAQAAAAAAAAD9////AQAAAAAAAAD+////AQAAAAAAAAD+//7/AQAAAAAAAAD+//3/AQAAAAAAAAD///3/AQAAAAAAAAD///z/AQAAAAAAAAAAAPz/AQAAAAAAAAAAAP3/AQAAAAAAAAD///7/AQAAAAAAAAD9//7/AQAAAAAAAAABAPz/AQAAAAAAAAACAPz/AQAAAAAAAAACAP3/AQAAAAAAAAADAP3/AQAAAAAAAAADAP7/AQAAAAAAAAACAP7/AQAAAAAAAAABAP3/AQAAAAAAAAABAP7/AQAAAAAAAAAAAP7/AQAAAAAAAAADAPz/AQAAAAAAAAAEAPz/AQAAAAAAAAAFAP3/AQAAAAAAAAAGAP3/AQAAAAAAAAAGAP7/AQAAAAAAAAAGAP//AQAAAAAAAAAFAAAAAQAAAAAAAAAFAAEAAQAAAAAAAAAEAAEAAQAAAAAAAAAEAAIAAQAAAAAAAAADAAIAAQAAAAAAAAACAAEAAQAAAAAAAAACAAAAAQAAAAAAAAAEAP3/AQAAAAAAAAAEAP7/AQAAAAAAAAAEAAAAAQAAAAAAAAADAAEAAQAAAAAAAAACAAIAAQAAAAAAAAAFAP7/AQAAAAAAAAAFAP//AQAAAAAAAAADAAAAAQAAAAAAAAABAAIAAQAAAAAAAAAAAAIAAQAAAAAAAAD//wIAAQAAAAAAAAD+/wIAAQAAAAAAAAD+/wEAAQAAAAAAAAD+/wAAAQAAAAAAAAD///v/AQAAAAAAAAD///r/AQAAAAAAAAD+//v/AQAAAAAAAAD9//v/AQAAAAAAAAD9//z/AQAAAAAAAAD8//z/AQAAAAAAAAD7//z/AQAAAAAAAAD6//z/AQAAAAAAAAD5//z/AQAAAAAAAAD4//z/AQAAAAAAAAD4//v/AQAAAAAAAAD5//v/AQAAAAAAAAD6//v/AQAAAAAAAAD7//v/AQAAAAAAAAD8//v/AQAAAAAAAAD9//r/AQAAAAAAAAD+//r/AQAAAAAAAAAAAPv/AQAAAAAAAAABAPv/AQAAAAAAAAACAPv/AQAAAAAAAAADAPv/AQAAAAAAAAAEAPv/AQAAAAAAAAAFAPv/AQAAAAAAAAAGAPv/AQAAAAAAAAAHAPv/AQAAAAAAAAAIAPv/AQAAAAAAAAAIAPr/AQAAAAAAAAAHAPr/AQAAAAAAAAAGAPr/AQAAAAAAAAAFAPr/AQAAAAAAAAAEAPr/AQAAAAAAAAADAPr/AQAAAAAAAAAAAPr/AQAAAAAAAAABAPr/AQAAAAAAAAACAPr/AQAAAAAAAAD7//r/AQAAAAAAAAD8//r/AQAAAAAAAAD6//r/AQAAAAAAAAD5//r/AQAAAAAAAAD4//r/AQAAAAAAAAD3//r/AQAAAAAAAAD3//v/AQAAAAAAAAD3//z/AQAAAAAAAAD3//3/AQAAAAAAAAD3//7/AQAAAAAAAAD3////AQAAAAAAAAD3/wAAAQAAAAAAAAD4/wAAAQAAAAAAAAD4////AQAAAAAAAAD4//7/AQAAAAAAAAD5//3/AQAAAAAAAAD6//3/AQAAAAAAAAD6//7/AQAAAAAAAAD5////AQAAAAAAAAD5/wAAAQAAAAAAAAD4//3/AQAAAAAAAAD7//3/AQAAAAAAAAD8//7/AQAAAAAAAAD7////AQAAAAAAAAD6////AQAAAAAAAAD5//7/AQAAAAAAAAD+//z/AQAAAAAAAAD8//3/AQAAAAAAAAD7//7/AQAAAAAAAAD9//3/AQAAAAAAAAD8////AQAAAAAAAAD7/wAAAQAAAAAAAAD6/wAAAQAAAAAAAAD9/wEAAQAAAAAAAAD9/wIAAQAAAAAAAAD8/wIAAQAAAAAAAAD7/wIAAQAAAAAAAAD6/wIAAQAAAAAAAAD6/wEAAQAAAAAAAAD8/wAAAQAAAAAAAAD8/wEAAQAAAAAAAAD7/wEAAQAAAAAAAAABAAAAAQAAAAAAAAABAAEAAQAAAAAAAAAAAAEAAQAAAAAAAAAHAP3/AQAAAAAAAAAHAPz/AQAAAAAAAAAFAPz/AQAAAAAAAAAGAPz/AQAAAAAAAAAIAPz/AQAAAAAAAAAIAP3/AQAAAAAAAAAIAP7/AQAAAAAAAAAIAP//AQAAAAAAAAAIAAAAAQAAAAAAAAAIAAEAAQAAAAAAAAAHAP//AQAAAAAAAAAHAP7/AQAAAAAAAAAHAAAAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAIAAQAAAAAAAAAGAAEAAQAAAAAAAAAGAAAAAQAAAAAAAAAFAAIAAQAAAAAAAAAGAAIAAQAAAAAAAAD8/wUAAQAAAAAAAAD9/wUAAQAAAAAAAAD+/wUAAQAAAAAAAAD//wUAAQAAAAAAAAAAAAQAAQAAAAAAAAABAAQAAQAAAAAAAAACAAQAAQAAAAAAAAADAAQAAQAAAAAAAAAEAAMAAQAAAAAAAAAFAAMAAQAAAAAAAAADAAMAAQAAAAAAAAACAAMAAQAAAAAAAAD//wQAAQAAAAAAAAD+/wQAAQAAAAAAAAD7/wUAAQAAAAAAAAD6/wUAAQAAAAAAAAD5/wUAAQAAAAAAAAD5/wQAAQAAAAAAAAD6/wQAAQAAAAAAAAD7/wQAAQAAAAAAAAD8/wMAAQAAAAAAAAD9/wMAAQAAAAAAAAD+/wMAAQAAAAAAAAD//wMAAQAAAAAAAAAAAAMAAQAAAAAAAAABAAMAAQAAAAAAAAD9/wQAAQAAAAAAAAD8/wQAAQAAAAAAAAD6/wMAAQAAAAAAAAD7/wMAAQAAAAAAAAD5/wMAAQAAAAAAAAD5/wIAAQAAAAAAAAD5/wEAAQAAAAAAAAD4/wIAAQAAAAAAAAD4/wMAAQAAAAAAAAD4/wQAAQAAAAAAAAD3/wQAAQAAAAAAAAD3/wUAAQAAAAAAAAD3/wMAAQAAAAAAAAD3/wIAAQAAAAAAAAD3/wEAAQAAAAAAAAD4/wEAAQAAAAAAAAD4/wUAAQAAAAAAAAAAAAUAAQAAAAAAAAABAAUAAQAAAAAAAAACAAUAAQAAAAAAAAADAAUAAQAAAAAAAAAEAAUAAQAAAAAAAAAFAAUAAQAAAAAAAAAGAAUAAQAAAAAAAAAHAAUAAQAAAAAAAAAHAAQAAQAAAAAAAAAIAAQAAQAAAAAAAAAIAAMAAQAAAAAAAAAIAAIAAQAAAAAAAAAIAAUAAQAAAAAAAAAGAAQAAQAAAAAAAAAFAAQAAQAAAAAAAAAEAAQAAQAAAAAAAAAGAAMAAQAAAAAAAAAHAAMAAQAAAAAAAAAEAPn/AQAAAAAAAAAFAPn/AQAAAAAAAAD+//n/AQAAAAAAAAD///n/AQAAAAAAAAAAAPn/AQAAAAAAAAABAPn/AQAAAAAAAAACAPn/AQAAAAAAAAADAPj/AQAAAAAAAAADAPn/AQAAAAAAAAD8//n/AQAAAAAAAAD9//n/AQAAAAAAAAD+//j/AQAAAAAAAAD///j/AQAAAAAAAAAAAPj/AQAAAAAAAAACAPj/AQAAAAAAAAABAPj/AQAAAAAAAAD9//j/AQAAAAAAAAD8//j/AQAAAAAAAAD7//n/AQAAAAAAAAD6//n/AQAAAAAAAAD5//n/AQAAAAAAAAD4//n/AQAAAAAAAAD2//3/AQAAAAAAAAD2//7/AQAAAAAAAAD2////AQAAAAAAAAD2/wAAAQAAAAAAAAD2/wEAAQAAAAAAAAD2/wIAAQAAAAAAAAD1//3/AQAAAAAAAAD1//z/AQAAAAAAAAD1//v/AQAAAAAAAAD1//7/AQAAAAAAAAD1////AQAAAAAAAAD1/wAAAQAAAAAAAAD1/wEAAQAAAAAAAAD1/wIAAQAAAAAAAAD1/wMAAQAAAAAAAAD0/wAAAQAAAAAAAADz/wAAAQAAAAAAAADz////AQAAAAAAAADz//7/AQAAAAAAAADz//3/AQAAAAAAAADz//z/AQAAAAAAAADz//v/AQAAAAAAAAD0//z/AQAAAAAAAAD0//3/AQAAAAAAAAD0//7/AQAAAAAAAAD0////AQAAAAAAAAD0/wEAAQAAAAAAAAD0/wIAAQAAAAAAAAD0/wMAAQAAAAAAAADz/wEAAQAAAAAAAADz/wIAAQAAAAAAAADz/wMAAQAAAAAAAADz/wQAAQAAAAAAAADz/wUAAQAAAAAAAADz/wYAAQAAAAAAAAD0/wYAAQAAAAAAAAD1/wYAAQAAAAAAAAD2/wYAAQAAAAAAAAD3/wYAAQAAAAAAAAD2/wMAAQAAAAAAAAD1/wQAAQAAAAAAAAD0/wUAAQAAAAAAAAD2/wUAAQAAAAAAAAD2/wQAAQAAAAAAAAD0/wQAAQAAAAAAAAD1/wUAAQAAAAAAAAD4/wYAAQAAAAAAAAD5/wYAAQAAAAAAAAD6/wYAAQAAAAAAAAD7/wYAAQAAAAAAAAAJAAAAAQAAAAAAAAAIAAYAAQAAAAAAAAAHAAYAAQAAAAAAAAAGAAYAAQAAAAAAAAAFAAYAAQAAAAAAAAAEAAYAAQAAAAAAAAADAAYAAQAAAAAAAAACAAYAAQAAAAAAAAACAAcAAQAAAAAAAAABAAcAAQAAAAAAAAABAAYAAQAAAAAAAAAAAAYAAQAAAAAAAAD//wYAAQAAAAAAAAD+/wYAAQAAAAAAAAD9/wYAAQAAAAAAAAD8/wYAAQAAAAAAAAAJAAYAAQAAAAAAAAAJAAUAAQAAAAAAAAAJAAQAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAEAAQAAAAAAAAAJAP//AQAAAAAAAAAJAP7/AQAAAAAAAAAJAP3/AQAAAAAAAAAJAPz/AQAAAAAAAAAJAPv/AQAAAAAAAAAJAPr/AQAAAAAAAAAIAPn/AQAAAAAAAAAJAPj/AQAAAAAAAAAIAPj/AQAAAAAAAAAHAPj/AQAAAAAAAAAGAPj/AQAAAAAAAAAFAPf/AQAAAAAAAAAEAPf/AQAAAAAAAAADAPf/AQAAAAAAAAAFAPj/AQAAAAAAAAAEAPj/AQAAAAAAAAD7//j/AQAAAAAAAAD6//j/AQAAAAAAAAD5//j/AQAAAAAAAAD4//j/AQAAAAAAAAD4//f/AQAAAAAAAAD3//f/AQAAAAAAAAD2//f/AQAAAAAAAAD1//f/AQAAAAAAAAD1//j/AQAAAAAAAAD0//j/AQAAAAAAAADz//j/AQAAAAAAAADz//n/AQAAAAAAAADz//r/AQAAAAAAAAD0//v/AQAAAAAAAAD2//r/AQAAAAAAAAD2//n/AQAAAAAAAAD3//n/AQAAAAAAAAD2//z/AQAAAAAAAAD1//r/AQAAAAAAAAD1//n/AQAAAAAAAAD0//n/AQAAAAAAAAD0//r/AQAAAAAAAAD2//v/AQAAAAAAAAD2//j/AQAAAAAAAAD3//j/AQAAAAAAAAD0//f/AQAAAAAAAADz//f/AQAAAAAAAAD1//b/AQAAAAAAAAD2//b/AQAAAAAAAAD5//f/AQAAAAAAAAD6//f/AQAAAAAAAAD7//f/AQAAAAAAAAD8//f/AQAAAAAAAAD9//f/AQAAAAAAAAD+//f/AQAAAAAAAAD///f/AQAAAAAAAAAAAPf/AQAAAAAAAAABAPf/AQAAAAAAAAACAPf/AQAAAAAAAAAGAPf/AQAAAAAAAAAHAPf/AQAAAAAAAAAIAPf/AQAAAAAAAAAJAPf/AQAAAAAAAAAHAPn/AQAAAAAAAAAJAPn/AQAAAAAAAAAGAPn/AQAAAAAAAAAKAPf/AQAAAAAAAAALAPf/AQAAAAAAAAAMAPf/AQAAAAAAAAAMAPj/AQAAAAAAAAAMAPn/AQAAAAAAAAAMAPr/AQAAAAAAAAAMAPv/AQAAAAAAAAAMAPz/AQAAAAAAAAAMAP3/AQAAAAAAAAAMAP7/AQAAAAAAAAAMAP//AQAAAAAAAAAMAAAAAQAAAAAAAAAMAAEAAQAAAAAAAAAMAAIAAQAAAAAAAAAMAAMAAQAAAAAAAAAMAAQAAQAAAAAAAAAMAAUAAQAAAAAAAAAMAAYAAQAAAAAAAAALAAYAAQAAAAAAAAAKAAYAAQAAAAAAAAAKAAUAAQAAAAAAAAAKAAQAAQAAAAAAAAAKAAMAAQAAAAAAAAAKAAIAAQAAAAAAAAAKAAEAAQAAAAAAAAAKAAAAAQAAAAAAAAAKAP//AQAAAAAAAAAKAP7/AQAAAAAAAAAKAP3/AQAAAAAAAAAKAPz/AQAAAAAAAAAKAPv/AQAAAAAAAAAKAPr/AQAAAAAAAAAKAPn/AQAAAAAAAAAKAPj/AQAAAAAAAAALAPj/AQAAAAAAAAALAPn/AQAAAAAAAAALAPr/AQAAAAAAAAALAPv/AQAAAAAAAAALAPz/AQAAAAAAAAALAP3/AQAAAAAAAAALAP7/AQAAAAAAAAALAP//AQAAAAAAAAALAAAAAQAAAAAAAAALAAEAAQAAAAAAAAALAAIAAQAAAAAAAAALAAMAAQAAAAAAAAALAAQAAQAAAAAAAAALAAUAAQAAAAAAAAAMAAcAAQAAAAAAAAAMAAgAAQAAAAAAAAALAAgAAQAAAAAAAAAKAAgAAQAAAAAAAAAJAAgAAQAAAAAAAAAIAAgAAQAAAAAAAAAHAAgAAQAAAAAAAAAGAAgAAQAAAAAAAAAFAAgAAQAAAAAAAAAEAAgAAQAAAAAAAAADAAgAAQAAAAAAAAACAAgAAQAAAAAAAAABAAgAAQAAAAAAAAAAAAgAAQAAAAAAAAD//wgAAQAAAAAAAAD+/wgAAQAAAAAAAAD9/wgAAQAAAAAAAAD8/wgAAQAAAAAAAAD7/wgAAQAAAAAAAAD6/wgAAQAAAAAAAAD5/wgAAQAAAAAAAAD4/wgAAQAAAAAAAAD3/wgAAQAAAAAAAAD2/wgAAQAAAAAAAAD1/wgAAQAAAAAAAAD0/wgAAQAAAAAAAADz/wcAAQAAAAAAAADz/wgAAQAAAAAAAAD0/wcAAQAAAAAAAAD1/wcAAQAAAAAAAAD2/wcAAQAAAAAAAAD3/wcAAQAAAAAAAAD4/wcAAQAAAAAAAAD5/wcAAQAAAAAAAAD6/wcAAQAAAAAAAAD+/wcAAQAAAAAAAAD9/wcAAQAAAAAAAAD8/wcAAQAAAAAAAAD7/wcAAQAAAAAAAAAAAAcAAQAAAAAAAAD//wcAAQAAAAAAAAAFAAcAAQAAAAAAAAAGAAcAAQAAAAAAAAAHAAcAAQAAAAAAAAAIAAcAAQAAAAAAAAAJAAcAAQAAAAAAAAAKAAcAAQAAAAAAAAALAAcAAQAAAAAAAAAEAAcAAQAAAAAAAAADAAcAAQAAAAAAAADy/wgAAQAAAAAAAADx/wgAAQAAAAAAAADw/wgAAQAAAAAAAADw/wcAAQAAAAAAAADw/wYAAQAAAAAAAADw/wUAAQAAAAAAAADw/wQAAQAAAAAAAADw/wMAAQAAAAAAAADw/wIAAQAAAAAAAADw/wEAAQAAAAAAAADw/wAAAQAAAAAAAADw////AQAAAAAAAADx////AQAAAAAAAADy////AQAAAAAAAADy/wMAAQAAAAAAAADy/wQAAQAAAAAAAADy/wUAAQAAAAAAAADy/wYAAQAAAAAAAADy/wcAAQAAAAAAAADx/wcAAQAAAAAAAADx/wYAAQAAAAAAAADx/wUAAQAAAAAAAADx/wQAAQAAAAAAAADx/wMAAQAAAAAAAADx/wIAAQAAAAAAAADx/wEAAQAAAAAAAADx/wAAAQAAAAAAAADy/wAAAQAAAAAAAADy/wEAAQAAAAAAAADy/wIAAQAAAAAAAADw//7/AQAAAAAAAADx//7/AQAAAAAAAADx//3/AQAAAAAAAADy//3/AQAAAAAAAADy//z/AQAAAAAAAADx//z/AQAAAAAAAADy//7/AQAAAAAAAADw//3/AQAAAAAAAADw//z/AQAAAAAAAADw//v/AQAAAAAAAADw//r/AQAAAAAAAADw//n/AQAAAAAAAADw//j/AQAAAAAAAADw//f/AQAAAAAAAADx//f/AQAAAAAAAADy//f/AQAAAAAAAADy//r/AQAAAAAAAADy//v/AQAAAAAAAADx//v/AQAAAAAAAADx//r/AQAAAAAAAADx//n/AQAAAAAAAADy//j/AQAAAAAAAADy//n/AQAAAAAAAADx//j/AQAAAAAAAAANAPf/AQAAAAAAAAAOAPf/AQAAAAAAAAAPAPf/AQAAAAAAAAAPAPj/AQAAAAAAAAAPAPn/AQAAAAAAAAAPAPr/AQAAAAAAAAAPAPv/AQAAAAAAAAAPAPz/AQAAAAAAAAAPAP3/AQAAAAAAAAAPAP7/AQAAAAAAAAAPAP//AQAAAAAAAAAPAAAAAQAAAAAAAAAPAAEAAQAAAAAAAAAPAAIAAQAAAAAAAAAPAAMAAQAAAAAAAAAPAAQAAQAAAAAAAAAOAAQAAQAAAAAAAAANAAQAAQAAAAAAAAANAAMAAQAAAAAAAAANAAIAAQAAAAAAAAANAAEAAQAAAAAAAAANAAAAAQAAAAAAAAANAP//AQAAAAAAAAANAP7/AQAAAAAAAAANAP3/AQAAAAAAAAANAPz/AQAAAAAAAAANAPv/AQAAAAAAAAANAPr/AQAAAAAAAAANAPn/AQAAAAAAAAAOAPn/AQAAAAAAAAAOAPj/AQAAAAAAAAANAPj/AQAAAAAAAAAOAPr/AQAAAAAAAAAOAPv/AQAAAAAAAAAOAPz/AQAAAAAAAAAOAP3/AQAAAAAAAAAOAP7/AQAAAAAAAAAOAP//AQAAAAAAAAAOAAMAAQAAAAAAAAAOAAIAAQAAAAAAAAAOAAEAAQAAAAAAAAAOAAAAAQAAAAAAAAAPAAUAAQAAAAAAAAAPAAYAAQAAAAAAAAAPAAcAAQAAAAAAAAAPAAgAAQAAAAAAAAAOAAgAAQAAAAAAAAANAAgAAQAAAAAAAAANAAcAAQAAAAAAAAANAAYAAQAAAAAAAAANAAUAAQAAAAAAAAAOAAYAAQAAAAAAAAAOAAcAAQAAAAAAAAAOAAUAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_ipjfq")
y_sort_origin = -2
rendering_quadrant_size = 32

[connection signal="reload" from="." to="player" method="_on_node_2d_reload"]
[connection signal="timeout" from="ZombieSpawntime" to="." method="_on_zombie_spawntime_timeout"]
